# Calibrated-Counterfactual-Evaluation-of-Dispatch-Policies-under-Cascading-Divergence

./: .gitignore  CITATION.cff  CITATION.md  README.md  pyproject.toml
agents/agents/: __init__.py  bc_agent.py  ddqn_agent.py
agents/outputs/: README.md
agents/training/bc/: dataset.py  find_optimal_threshold.py  inference.py  metrics.py  model.py  train_bc.py
agents/utils/: income_utils.py  logger_setup.py
data/: README.md
data/preprocessing_code/: README.md  extract_actual_eta.py  fix_overlapping_blocks.py  inspect_parquet.py  lookup_waybill.py
data/preprocessing_code/features/: active_seconds.py  cli.py  explode_cycles.py  features_assembler.py  filter_prebook.py  history_builder.py  join_main_info.py  loader.py  serializer.py
results/: system_simulation_metrics_baseline.json  system_simulation_metrics_bc_agent.json  system_simulation_metrics_ddqn_agent.json
simulation/: __init__.py  baseline_agent.py  capacity_tracker.py  dispatcher.py  metrics.py  order_tracker.py  router.py  run_all_simulations.py  run_ddqn_action_analysis.py  run_simulation.py  scorer.py  simulator.py  train_ddqn_integrated.py  travel_time_model.py  utilization_tracker.py  validate.py
simulation/analysis/: __init__.py  compare_results.py  plot_divergence_case_study.py  select_case_courier.py
